# pure-tagsoup

./: .gitmodules  atomic-tagsoup.cabal  atomic-tagsoup.nix  default.nix  package.yaml  pure-tagsoup.cabal  pure-tagsoup.nix
src/Atomic/: TagSoup.hs
src/Pure/: TagSoup.hs
