name:                pure-tagsoup
version:             0.7.0.0
synopsis:
homepage:            github.com/grumply/pure-tagsoup
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:
    base >= 4.8 && < 5,
    pure-core >= 0.7 && < 1,
    pure-txt >= 0.7 && < 1,
    tagsoup

  hs-source-dirs: src

  exposed-modules:
    Pure.TagSoup

  default-language: Haskell2010
