name:                pure-tagsoup
version:             0.8.0.0
homepage:            purehs.org/doc/pure-tagsoup
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-tagsoup.git

library
  build-depends:
    base,
    pure-core,
    pure-txt,
    tagsoup

  hs-source-dirs: src

  exposed-modules:
    Pure.TagSoup

  default-language: Haskell2010
